--- a/week2_tutorial/tutorial1_summary.html
+++ b/week2_tutorial/tutorial1_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>tutorial1 Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>tutorial1 Project Status (10/16/2024 - 19:51:20)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>week2_tutorial.xise</TD>
@@ -48,7 +48,7 @@ No Errors</TD>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>0 &nbsp;<A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.twx?&DataKey=XmlTimingReport'>(Timing Report)</A></TD>
+<TD>0 &nbsp;</TD>
 </TR>
 </TABLE>
 
@@ -146,21 +146,21 @@ System Settings</A>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Oct 13 18:15:09 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Oct 13 18:15:43 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Oct 13 18:15:47 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/_xmsgs/map.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sun Oct 13 18:15:53 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.bld'>Translation Report</A></TD><TD>Current</TD><TD>Wed Oct 16 18:36:44 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Wed Oct 16 18:36:47 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/_xmsgs/map.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Wed Oct 16 18:36:52 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/_xmsgs/par.xmsgs?&DataKey=Info'>2 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sun Oct 13 18:15:54 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sun Oct 13 18:15:56 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.twr'>Post-PAR Static Timing Report</A></TD><TD>Out of Date</TD><TD>Sun Oct 13 18:15:54 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/_xmsgs/trce.xmsgs?&DataKey=Info'>6 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/tutorial1.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Wed Oct 16 18:36:55 2024</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Oct 13 13:31:19 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Oct 13 18:15:57 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Oct 13 18:16:01 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Oct 16 18:36:55 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Oct 16 19:51:24 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/16/2024 - 18:34:46</center>
+<br><center><b>Date Generated:</b> 10/16/2024 - 19:51:24</center>
 </BODY></HTML>
