--- a/week2_tutorial/tutorial1_summary.html
+++ b/week2_tutorial/tutorial1_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>tutorial1 Project Status (10/16/2024 - 19:51:20)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>tutorial1 Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>week2_tutorial.xise</TD>
@@ -158,9 +158,9 @@ System Settings</A>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Oct 13 13:31:19 2024</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Oct 16 18:36:55 2024</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Oct 16 19:51:24 2024</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/mnt/hgfs/shared/week2_tutorial/webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Wed Oct 16 18:36:57 2024</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/16/2024 - 19:51:24</center>
+<br><center><b>Date Generated:</b> 10/16/2024 - 21:29:04</center>
 </BODY></HTML>
